--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Wikis</title>
+    <title>Wiki Application for Bloc </title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,20 @@
   </head>
 
   <body>
+    <div class="container">
+      <ul class="nav nav-tabs">
+        <li><%= link_to "Home", root_path %></li>
+        <% unless user_signed_in? %>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        <li class="pull-right"><%= link_to "login", new_user_session_path  %>
+        <% end %>
+        <% if user_signed_in? %>
+        <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <% end %>
+      </ul>
+    </div>
+    <p class="notice"><%= notice %></p>
+     <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
