--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,16 @@
   <body>
     <div class="container">
       <ul class="nav nav-tabs">
-        <li><%= link_to "Home", root_path %></li>
-        <% unless user_signed_in? %>
-        <li><%= link_to "Sign Up", new_user_registration_path %></li>
-        <li class="pull-right"><%= link_to "login", new_user_session_path  %>
-        <% end %>
+
+
         <% if user_signed_in? %>
+        Signed in as: <strong><%= current_user.email %></strong>
+         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> -
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <% else %>
+        <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
+<%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
+
         <% end %>
       </ul>
     </div>
