--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Wiki Application for Bloc </title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Wiki Application for Bloc </title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <div class="container">
-      <ul class="nav nav-tabs">
-
-
+<body>
+  <div class="container">
+    <div class="row text-center">
+    <ul class="nav nav-tabs">
+      <div class="pull-left">
         <% if user_signed_in? %>
         Signed in as: <strong><%= current_user.email %></strong>
-         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> -
-        <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      </div>
+
+
+      <%= link_to "All Wikis", wikis_path %></li> |
+    <%= link_to "New Wiki", new_wiki_path %></li>
+
+      <div class="pull-right">
+      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %>
+
+
         <% else %>
         <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
-<%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
-
-        <% end %>
-      </ul>
+        <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
+      </div>
     </div>
-    <p class="notice"><%= notice %></p>
-     <p class="alert"><%= alert %></p>
-    <%= yield %>
-  </body>
+      <% end %>
+    </ul>
+  </div>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+  <%= yield %>
+</body>
 </html>
