Made some repairs to index.html

--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -4,7 +4,6 @@
 </div>
 <div class="row">
   <div class="col-md-8">
-
-    <% @wikis.each do |wiki| %>
     <%= render @wikis %>
-    <% end %>
+  </div>
+</div>
