--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container cont3">
     <div class="row text-center">
     <ul class="nav nav-tabs">
       <div class="pull-left">
@@ -27,6 +27,7 @@
 
 
         <% else %>
+        <%= link_to "All Wikis", wikis_path %></li>
         <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
         <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
       </div>
