--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,9 +1,12 @@
+<div class="index-container">
 <h1>Wikis</h1>
 <div class="col-md-4 pull-right">
   <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
 </div>
+<br />
 <div class="row">
   <div class="col-md-8">
     <%= render @wikis %>
   </div>
+</div>
 </div>
