--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div class="pull-left">
         <% if user_signed_in? %>
         Signed in as: <strong><%= current_user.email %></strong><br />
-        Your role is: <strong><%= current_user.role %></storong>
+        Your role is: <strong><%= current_user.role %></strong>
       </div>
 
 
