added some pages

--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
   <div class="row">
     <div class="col-md-4">
       <p>Guidelines for adding wikis:</P>
@@ -28,3 +29,4 @@
           <% end %>
         </div>
     </div>
+  </div>
