--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
       </div>
 
 
-      <%= link_to "All Wikis", wikis_path %></li> |
-    <%= link_to "New Wiki", new_wiki_path %></li>
+      <%= link_to "All Wikis", wikis_path %></li>
+
 
       <div class="pull-right">
       <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
