--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,11 @@
 <br>
 <h1 class="text-center">Blocipedia: Social, Markdown Wikis</h1>
 <div class="jumbotron">
+  <div class="text-center">
+    <p>Sign up for a free account!</p>
+<%= link_to "Sign-up", new_user_registration_path, class: 'btn btn-success' %>
+
+  </div>
 
   <div class="text-center">
 
@@ -15,31 +20,17 @@
 </div>
 <div class="row">
 
-  <div class="col-md-6 text-center">
-    <p>Create Private Wikis!</p>
-    <%= form_tag charges_path do %>
-    <article>
-      <% if flash[:error].present? %>
-      <div id="error_explanation">
-        <p><%= flash[:error] %></p>
-      </div>
-      <% end %>
-      <label class="amount">
-        <span>Amount: $15.00</span>
-      </label>
-    </article>
-
-    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-    data-description="A month's subscription"
-    data-amount="1500"
-    data-locale="auto"></script>
-
+  <div class="col-md-4 text-center">
+  <%= image_tag("how.png",size: "220x180", :alt => "picture") %>
   </div>
-  <% end %>
-  <div class="col-md-6 text-center">
-    <p>Create as many public wikis as you want</p>
-    <strong><p>FREE</p></strong>
-    <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-primary' %>
+  <div class="col-md-4 text-center">
+  <%= image_tag("woman.jpg",size: "220x180", :alt => "picture") %>
   </div>
+
+
+
+  <div class="col-md-4 text-center">
+  <%= image_tag("how.png",size: "220x180", :alt => "picture") %>
+  </div>
+
 </div>
