--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container"
 <h3><%= @wiki.title %></h3>
 <small>
   submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.email %>
@@ -10,4 +11,5 @@
     <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
     <%= link_to "Delete Wikis", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
   </div>
+</div>
 </div>
