--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -6,7 +6,12 @@
 <br />
 <div class="row">
   <div class="col-md-8">
-    <%= render @wikis %>
+  <!-- <% @wikis.each do |wiki| %>
+  <p><%= link_to wiki.title, wiki %></p>
+  <% end %> -->
+
+  <%= render @wikis %>
+
   </div>
 </div>
 </div>
