--- a/app/views/wikis/_wiki.html.erb
+++ b/app/views/wikis/_wiki.html.erb
@@ -1,12 +1,15 @@
 <div class="media">
   <div class="media-body">
     <h4 class="media-heading">
-
       <!-- Creat a link to the show view for each Wiki -->
+        <% @wikis.each do |wiki| %>
       <%= link_to wiki.title, wiki %>
     </h4>
+  </p>
     <small>
       <%= wiki.body %>
     </small>
+  </p>
+    <% end %>
   </div>
 </div>
