--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
       </div>
 
 
-      <%= link_to "All Wikis", wikis_path %></li>
+      <%= link_to "All Wikis", wikis_path %></li> -
+      <%= link_to "All Users", users_all_path %>
 
 
       <div class="pull-right">
