--- a/app/views/wikis/_wiki.html.erb
+++ b/app/views/wikis/_wiki.html.erb
@@ -6,8 +6,8 @@
     </h4>
     <p>
       <small>
-        <%= wiki.body %>
+        <%= markdown(wiki.body) %>
       </small>
-    </p>  
+    </p>
   </div>
 </div>
