--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,25 @@
-<h1>Add a Collaborator to your wiki</h1>
 <div class="container">
   <div class="row">
-    <div class="col-md-8">
+      <table class="table table-striped">
+      <tr>
+        <th>user email</th>
+        <th>User role</th>
+        <th></th>
       <% @users.each do |user| %>
-    <h3>  <%= button_to "Make Admin", {action: "make_admin", id: current_user.id }, method: :put %>
-      <%= link_to user.email%> role: <strong><%= current_user.role %></strong></h3>
+      <tr>
+      <td>
+    <h3><%= link_to user.email%> </h3>
+  </td>
+  <td>
+    <h3>  <strong><%= user.role %></strong></h3>
+  </td>
+  <td>
+    <%= button_to "Make Admin    ", {action: "make_admin", id: user.id }, method: :put %>
+    <%= button_to "Make Premium", {action: "make_premium", id: user.id }, method: :put %>
+    <%= button_to "Make Standard", {action: "make_standard", id: user.id }, method: :put %>
+  </td>
+  </tr>
       <% end %>
-    </div>
+    </table>
   </div>
 </div>
