--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,15 +1,18 @@
 <div class="container"
 <h3><%= @wiki.title %></h3>
 <small>
-  submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.email %>
+  submitted <%= time_ago_in_words(@wiki.created_at) %> ago
 </small>
 <div class="row">
   <div class="col-md-8">
     <p><%= markdown(@wiki.body) %></p>
   </div>
   <div class="col-md-4">
-    <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+    <%= link_to "Edit", edit_wiki_path, class: 'btn btn-success' %>
     <%= link_to "Delete Wikis", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+
   </div>
+  <div class="col-md-8">
+    <%= link_to "Add Collaborator", new_wiki_collaborator_path(@wiki), class: 'btn btn-success' %>
 </div>
 </div>
