--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -12,7 +12,26 @@
     <%= link_to "Delete Wikis", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
 
   </div>
-  <div class="col-md-8">
-    <%= link_to "Add Collaborator", new_wiki_collaborator_path(@wiki), class: 'btn btn-success' %>
+
 </div>
 </div>
+<% if @wiki.private? %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+<table class="table table-striped">
+<tr>
+<th>Collaborator</th>
+<th></th>
+</tr>
+<% @wiki.collaborators.each do |collaborator| %>
+  <td><p><%= collaborator.user.email %></p></td>
+  <td><p><%= link_to "Remove", wiki_collaborator_path(collaborator), method: :delete, class: "btn btn-success" %></p></td>
+</tr>
+<% end %>
+
+</table>
+</div>
+</div>
+</div>
+<% end %>
