--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,12 @@
         Your role is: <strong><%= current_user.role %></strong>
       </div>
 
-
-      <%= link_to "All Wikis", wikis_path %></li> -
-      <%= link_to "All Users", users_all_path %>
+      <% if user_signed_in? %>
+      <%= link_to "All Wikis", wikis_path %>
+      <% end %>
+      <% if current_user.role == "admin" %>
+      - <%= link_to "All Users", users_all_path %>
+      <% end %>
 
 
       <div class="pull-right">
@@ -29,7 +32,7 @@
 
 
         <% else %>
-        <%= link_to "All Wikis", wikis_path %></li>
+
         <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
         <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
       </div>
